# legal_team_agent

./: .gitignore  README.md  main.py  pyproject.toml
