[project]
name = "legal-team-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "Shireen",email = "shireenlowyk@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "phidata==2.5.33",
    "streamlit==1.40.2",
    "qdrant-client==1.12.1",
    "openai",
    "pypdf",
    "duckduckgo-search"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
